# webigator

./: .gitignore  COPYING  Makefile.am  README  README.ja  configure.ac
script/: add-examples.pl  data-streamer.pl  get-example.pl  label-examples.pl
script/cgi/: Template.pm  functions.pl  index.pl  settings.pl  webigator-demo-en.tpl  webigator-demo-ja.tpl  webigator-demo.cgi  webigator-demo.tpl  webigator-run-en.tpl  webigator-run.cgi  webigator-run.tpl  webigator-task-en.tpl  webigator-task-ja.tpl  webigator-task.cgi  webigator-task.tpl
script/cgi/css/: main.css  webigator.css
script/cgi/img/: Thumbs.db
script/cgi/js/: webigator.js
src/include/: Makefile.am
src/include/webigator/: classifier.h  config-base.h  config-webigator-client.h  config-webigator-server.h  config.h  data-store.h  dict.h  generic-string.h  sparse-map.h  symbol-set.h  task.h  text-classifier.h  text-example.h  util.h  webigator-client.h  webigator-server.h
src/lib/: Makefile.am  data-store.cc  dict.cc  sparse-map.cc  text-classifier.cc  text-example.cc  util.cc  webigator-client.cc  webigator-runner.cc  webigator-server.cc
src/test/: Makefile.am  test-base.h  test-data-store.h  test-server.h  test-text-classifier.h  test-util.h  test-webigator.cc
