NAFILCPP = webigator.cc webigator-server.cc webigator-client.cc sparse-map.cc dict.cc text-classifier.cc data-store.cc text-example.cc util.cc


AM_CPPFLAGS = -I$(srcdir)/../include

lib_LTLIBRARIES = libwebigator.la

libwebigator_la_SOURCES = ${NAFILCPP}
libwebigator_la_LDFLAGS = -version-info 0:0:0
